# solstice-personality-backend

./: .gitignore  pyproject.toml
app/: main.py
tests/: test_main.py
