[tool.poetry]
name = "solstice-personality-backend"
version = "0.1.0"
description = "This repo contains the backend service for personality-based features in Solstice, an 18+ Apple Exclusive social application."
authors = ["JoshJarabek7 <jarabekjosh@icloud.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
